<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildValue"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/build1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_build_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buildText"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />
    <NumberPicker
        android:id="@+id/build1Days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/build1Text"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/build1Text"
        app:layout_constraintVertical_bias="0.0" />
    <NumberPicker
        android:id="@+id/build1Hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="@+id/build1Text"
        app:layout_constraintTop_toTopOf="@+id/build1Text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/build1Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days             Hours"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buildText"
        app:layout_constraintEnd_toStartOf="@+id/build1Hours"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/build1Days"
        app:layout_constraintTop_toBottomOf="@+id/build1Text"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/build2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_build_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/buildText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />
    <NumberPicker
        android:id="@+id/build2Days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/build2Text"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/build2Text"
        app:layout_constraintVertical_bias="0.0" />
    <NumberPicker
        android:id="@+id/build2Hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="@+id/build2Text"
        app:layout_constraintTop_toTopOf="@+id/build2Text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/build2Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days             Hours"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buildText"
        app:layout_constraintEnd_toStartOf="@+id/build2Hours"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/build2Days"
        app:layout_constraintTop_toBottomOf="@+id/build2Text"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/buildText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desired_build_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />
    <NumberPicker
        android:id="@+id/buildDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buildText"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buildText"
        app:layout_constraintVertical_bias="0.0" />
    <NumberPicker
        android:id="@+id/buildHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/buildText"
        app:layout_constraintTop_toTopOf="@+id/buildText"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/buildValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days             Hours"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toStartOf="@+id/buildHours"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buildDays"
        app:layout_constraintTop_toBottomOf="@+id/buildText"
        app:layout_constraintVertical_bias="0.6" />


    <TextView
        android:id="@+id/arrowhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrowhead"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />
    <TextView
        android:id="@+id/arrowtail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrowtail"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

</androidx.constraintlayout.widget.ConstraintLayout>